--- a/lavamoat-config-override.json
+++ b/lavamoat-config-override.json
@@ -78,6 +78,9 @@
       "packages": {
         "@babel/plugin-proposal-object-rest-spread": true,
         "@babel/plugin-transform-runtime": true,
+        "@babel/plugin-proposal-class-properties": true,
+        "@babel/plugin-proposal-optional-chaining": true,
+        "@babel/plugin-proposal-nullish-coalescing-operator": true,
         "<root>": true
       }
     }
