--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@material-ui/core": "^4.11.0",
     "@metamask/controllers": "^3.1.0",
-    "@metamask/eth-ledger-bridge-keyring": "^0.2.6",
+    "@metamask/eth-ledger-bridge-keyring": "PatrykLucka/eth-ledger-bridge-keyring",
     "@metamask/eth-token-tracker": "^3.0.1",
     "@metamask/etherscan-link": "^1.1.0",
     "@metamask/inpage-provider": "^6.1.0",
