--- a/lavamoat-config-override.json
+++ b/lavamoat-config-override.json
@@ -81,6 +81,8 @@
         "@babel/plugin-proposal-class-properties": true,
         "@babel/plugin-proposal-optional-chaining": true,
         "@babel/plugin-proposal-nullish-coalescing-operator": true,
+        "@babel/preset-env": true,
+        "@babel/preset-react": true,
         "<root>": true
       }
     }
