--- a/package.json
+++ b/package.json
@@ -197,7 +197,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
-    "@cfxjs/fullnode": "^1.1.0",
+    "@cfxjs/fullnode": "^1.2.0-rc.1",
     "@metamask/eslint-config": "^1.1.0",
     "@metamask/forwarder": "^1.1.0",
     "@sentry/cli": "^1.49.0",
