--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "yarn build dev",
     "dist": "yarn build prod",
-    "build": "lavamoat development/build/index.js",
+    "build": "lavamoat development/build/index.js --applyExportsDefense=false",
     "start:test": "yarn build testDev",
     "benchmark:chrome": "SELENIUM_BROWSER=chrome node test/e2e/benchmark.js",
     "benchmark:firefox": "SELENIUM_BROWSER=firefox node test/e2e/benchmark.js",
