--- a/package.json
+++ b/package.json
@@ -251,6 +251,7 @@
     "koa": "^2.7.0",
     "lavamoat": "^4.3.0",
     "lockfile-lint": "^4.0.0",
+    "loose-envify": "^1.4.0",
     "mocha": "^7.2.0",
     "nock": "^9.0.14",
     "node-fetch": "^2.6.1",
