--- a/app/manifest.json
+++ b/app/manifest.json
@@ -32,11 +32,7 @@
   },
   "default_locale": "en",
   "background": {
-    "scripts": [
-      "chromereload.js",
-      "bg-libs.js",
-      "background.js"
-    ],
+    "scripts": ["chromereload.js", "bg-libs.js", "background.js"],
     "persistent": true
   },
   "browser_action": {
@@ -54,40 +50,27 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "file://*/*",
-        "http://*/*",
-        "https://*/*"
-      ],
-      "js": [
-        "portal-contentscript.js"
-      ],
+      "matches": ["file://*/*", "http://*/*", "https://*/*"],
+      "js": ["portal-contentscript.js"],
       "run_at": "document_start",
       "all_frames": true
     },
     {
-      "matches": [
-        "*://connect.trezor.io/*/popup.html"
-      ],
-      "js": [
-        "vendor/trezor/content-script.js"
-      ]
+      "matches": ["*://connect.trezor.io/*/popup.html"],
+      "js": ["vendor/trezor/content-script.js"]
     }
   ],
   "permissions": [
     "storage",
     "unlimitedStorage",
     "clipboardWrite",
-    "http://localhost:12539/",
+    "http://localhost:12537/",
     "https://confluxscan.io/*",
     "activeTab",
     "webRequest",
     "notifications"
   ],
-  "web_accessible_resources": [
-    "portal-inpage.js",
-    "phishing.html"
-  ],
+  "web_accessible_resources": ["portal-inpage.js", "phishing.html"],
   "externally_connectable": {
     "matches": [
       "https://confluxscan.io/*",
@@ -96,8 +79,6 @@
       "https://wallet-main.confluxrpc.org/*",
       "https://wallet-test.confluxrpc.org/*"
     ],
-    "ids": [
-      "*"
-    ]
+    "ids": ["*"]
   }
 }
