--- a/package.json
+++ b/package.json
@@ -310,7 +310,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint:changed:fix"
+      "pre-commit": "lint-staged"
     }
   }
 }
