--- a/package.json
+++ b/package.json
@@ -251,7 +251,6 @@
     "gulp-zip": "^4.0.0",
     "jsdom": "^11.2.0",
     "koa": "^2.7.0",
-    "lavamoat-core": "^6.1.0",
     "lockfile-lint": "^4.0.0",
     "mocha": "^7.2.0",
     "nock": "^9.0.14",
@@ -275,6 +274,7 @@
     "sass-loader": "^7.0.1",
     "selenium-webdriver": "^4.0.0-alpha.5",
     "serve-handler": "^6.1.2",
+    "ses": "0.11.0",
     "sesify": "^4.2.1",
     "sesify-viz": "^3.0.10",
     "sinon": "^9.0.0",
