--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "storybook:build": "build-storybook -c .storybook -o .out --static-dir ./app ./storybook/images",
     "storybook:deploy": "storybook-to-ghpages --existing-output-dir .out --remote storybook --branch master",
     "update-changelog": "./development/auto-changelog.sh",
-    "generate:migration": "./development/generate-migration.sh"
+    "generate:migration": "./development/generate-migration.sh",
+    "postinstall": "npx patch-package"
   },
   "resolutions": {
     "**/configstore/dot-prop": "^5.1.1",
