--- a/package.json
+++ b/package.json
@@ -64,7 +64,11 @@
     "generate:migration": "./development/generate-migration.sh"
   },
   "lint-staged": {
-    "*.{js,json}": ["prettier-eslint --write", "eslint", "git add"]
+    "*.{js,json}": [
+      "prettier-eslint --write",
+      "eslint",
+      "git add"
+    ]
   },
   "prettier": {
     "semi": false,
@@ -87,8 +91,8 @@
     "@download/blockies": "^1.0.3",
     "@material-ui/core": "1.0.0",
     "@metamask/eth-ledger-bridge-keyring": "^0.2.6",
-    "@sentry/browser": "^5.11.1",
-    "@sentry/integrations": "^5.11.1",
+    "@sentry/browser": "^5.27.3",
+    "@sentry/integrations": "^5.27.3",
     "@yqrashawn/cfx-contract-metadata": "^0.0.7",
     "@yqrashawn/cfx-json-rpc-middleware": "^4.4.6",
     "@yqrashawn/conflux-portal-inpage-provider": "^4.0.9",
