fix: sinagure request page showing the wrong account
CU-4zxqmy

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "lint-staged": {
     "*.{js,json}": [
       "prettier-eslint --write",
-      "eslint",
+      "eslint --fix",
       "git add"
     ]
   },
