--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,7 @@ workflows:
 jobs:
   create_release_pull_request:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - run:
@@ -107,7 +107,7 @@ jobs:
 
   prep-deps:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - restore_cache:
@@ -129,12 +129,12 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-          - node_modules
-          - build-artifacts
+            - node_modules
+            - build-artifacts
 
   prep-build:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -153,7 +153,7 @@ jobs:
 
   prep-build-test:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -171,7 +171,7 @@ jobs:
 
   prep-build-storybook:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -186,7 +186,7 @@ jobs:
 
   prep-scss:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -205,7 +205,7 @@ jobs:
 
   test-lint:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -229,7 +229,7 @@ jobs:
 
   test-lint-lockfile:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -240,7 +240,7 @@ jobs:
 
   test-deps:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -251,7 +251,7 @@ jobs:
 
   test-e2e-chrome:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -272,7 +272,7 @@ jobs:
 
   test-e2e-firefox:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       # - run:
@@ -293,7 +293,7 @@ jobs:
 
   benchmark:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -306,7 +306,7 @@ jobs:
           command: mv ./dist-test ./dist
       - run:
           name: Run page load benchmark
-          command: yarn benchmark:chrome --out test-artifacts/chrome/benchmark/pageload.json
+          command: yarn benchmark:firefox --out test-artifacts/chrome/benchmark/pageload.json
       - store_artifacts:
           path: test-artifacts
           destination: test-artifacts
@@ -317,7 +317,7 @@ jobs:
 
   job-publish-prerelease:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -347,7 +347,7 @@ jobs:
 
   job-publish-release:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -365,11 +365,11 @@ jobs:
 
   job-publish-storybook:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - add_ssh_keys:
           fingerprints:
-            - "5e:a3:2d:35:b6:25:b5:87:b1:41:11:0d:77:50:96:73"
+            - '5e:a3:2d:35:b6:25:b5:87:b1:41:11:0d:77:50:96:73'
       - checkout
       - attach_workspace:
           at: .
@@ -381,7 +381,7 @@ jobs:
 
   test-unit:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -396,7 +396,7 @@ jobs:
             - coverage
   test-unit-global:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -406,7 +406,7 @@ jobs:
           command: yarn test:unit:global
   test-mozilla-lint:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -417,7 +417,7 @@ jobs:
 
   test-integration-flat-firefox:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -433,7 +433,7 @@ jobs:
     environment:
       browsers: '["Chrome"]'
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -444,7 +444,7 @@ jobs:
 
   all-tests-pass:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - run:
           name: All Tests Passed
@@ -452,7 +452,7 @@ jobs:
 
   coveralls-upload:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.18.1-browsers
     steps:
       - checkout
       - attach_workspace:
