--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -271,7 +271,7 @@ jobs:
   benchmark:
     docker:
       - image: circleci/node:12-browsers
-    resource_class: medium+
+    resource_class: 2xlarge+
     steps:
       - checkout
       - attach_workspace:
