attempt to override preconfigured chrome version in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -226,6 +226,9 @@ jobs:
       - image: circleci/node:12-browsers
     steps:
       - checkout
+      - run:
+          name: Re-Install Chrome
+          command: ./.circleci/scripts/chrome-install.sh
       - attach_workspace:
           at: .
       - run:
