--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -228,7 +228,7 @@ jobs:
       - checkout
       - run:
           name: Re-Install Chrome
-          command: ./.circleci/scripts/chrome-install.sh
+          command: ./.circleci/scripts/chrome-install
       - attach_workspace:
           at: .
       - run:
@@ -276,6 +276,9 @@ jobs:
       - image: circleci/node:12-browsers
     steps:
       - checkout
+      - run:
+          name: Re-Install Chrome
+          command: ./.circleci/scripts/chrome-install
       - attach_workspace:
           at: .
       - run:
