--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@metamask/inpage-provider": "^6.1.0",
     "@metamask/jazzicon": "^2.0.0",
     "@metamask/logo": "^2.5.0",
+    "@metamask/safe-event-emitter": "^2.0.0",
     "@popperjs/core": "^2.4.0",
     "@reduxjs/toolkit": "^1.3.2",
     "@sentry/browser": "^5.26.0",
