--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "yarn build dev",
     "dist": "yarn build prod",
-    "build": "node development/build/index.js",
+    "build": "lavamoat development/build/index.js --applyExportsDefense=false",
     "start:test": "yarn build testDev",
     "benchmark:chrome": "SELENIUM_BROWSER=chrome node test/e2e/benchmark.js",
     "benchmark:firefox": "SELENIUM_BROWSER=firefox node test/e2e/benchmark.js",
@@ -52,6 +52,7 @@
     "storybook:deploy": "storybook-to-ghpages --existing-output-dir .out --remote storybook --branch master",
     "update-changelog": "./development/auto-changelog.sh",
     "generate:migration": "./development/generate-migration.sh",
+    "lavamoat:parse": "lavamoat ./development/build/index.js --writeAutoConfig",
     "postinstall": "yarn patch-package"
   },
   "resolutions": {
@@ -255,6 +256,7 @@
     "gulp-zip": "^4.0.0",
     "jsdom": "^11.2.0",
     "koa": "^2.7.0",
+    "lavamoat": "^4.3.0",
     "lockfile-lint": "^4.0.0",
     "loose-envify": "^1.4.0",
     "mocha": "^7.2.0",
@@ -281,7 +283,6 @@
     "selenium-webdriver": "4.0.0-alpha.7",
     "serve-handler": "^6.1.2",
     "ses": "0.11.0",
-    "sesify": "^4.2.1",
     "sesify-viz": "^3.0.10",
     "sinon": "^9.0.0",
     "source-map": "^0.7.2",
