--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
+    "@babel/types": "^7.12.7",
     "@metamask/eslint-config": "^4.1.0",
     "@metamask/forwarder": "^1.1.0",
     "@metamask/test-dapp": "^4.0.1",
